src/landing/landing.scss
@import 'style/_fonts.scss';
@import 'style/_reset.scss';
@import 'style/_theme.scss';

.landing {
  align-items: center;
  background-color: $primary;
  background-image: url('../assets/png/kuji.png');
  display: flex;
  flex-direction: column;
  font-family: $title-font;
  height: 100vh;
  min-height: 500px;
  justify-content: center;
}
.landing__description {
  left: 6%;
  margin-top: 20px;
  position: relative;
}
.landing__description_fill .landing__description_dark {
  animation: darkfill 0.4s forwards;
}
.landing__description_fill .landing__description_light {
  animation: lightfill 0.4s forwards;
}
.landing__name {
  margin-bottom: 12px;
}
@keyframes darkfill {
  from {
    fill: rgba(26, 64, 95, 0);
    stroke-width: 3;
  }
  to {
    fill: rgba(26, 64, 95, 1);
    stroke-width: 0;
  }
}
@keyframes lightfill {
  from {
    fill: rgba(248, 241, 229, 0);
    stroke-width: 3;
  }
  to {
    fill: rgba(248, 241, 229, 1);
    stroke-width: 0;
  }
}
@media (max-width: 700px) {
  .landing {
    min-height: calc(49.7vw + 120px); // 20px for desc. margin, 100px for padding
  }
  .landing__description {
    left: 1%;
    margin-top: 15px;
  }
  .landing__name {
    margin-bottom: 8px;
    right: 0%;
  }
}

@media (orientation: landscape) {
  .landing__description svg {
    height: 8vh;
    width: auto;
  }
  .landing__main-image {
    height: 50vh;
    min-height: 250px;
    min-width: 405px;
    width: 81vh; // 1.62 * height
  }
  .landing__name svg {
    height: 9vh;
    width: auto;
  }
}

@media (orientation: portrait) {
  .landing__description svg {
    height: 10.3vw; // 0.136 * width
    width: 75vw;
  }
  .landing__main-image {
    height: 49.6vw; // 0.62 * width
    width: 80vw;
  }
  .landing__name svg {
    height: 9.1vw; // 0.113 * widtg
    width: 80vw;
  }
}

